internal/xds/translator/testdata/out/xds-ir/http-route-timeout.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        idleTimeout: 20s
        maxStreamDuration:
          maxStreamDuration: 30s
        timeout: 5s
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: second-route
      route:
        cluster: second-route-dest
        idleTimeout: 4000s
        maxStreamDuration:
          maxStreamDuration: 0s
        timeout: 4000s
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: third-route
      route:
        cluster: third-route-dest
        idleTimeout: 0s
        timeout: 0s
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: forth-route
      route:
        cluster: fourth-route-dest
        idleTimeout: 3600s
        timeout: 10s
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: fifth-route
      route:
        cluster: fifth-route-dest
        idleTimeout: 3600s
        timeout: 10s
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: sixth-route
      route:
        cluster: sixth-route-dest
        idleTimeout: 0s
        timeout: 0s
        upgradeConfigs:
        - upgradeType: websocket
    - match:
        prefix: /
      name: seventh-route
      route:
        cluster: seventh-route-dest
        idleTimeout: 0s
        timeout: 0s
        upgradeConfigs:
        - upgradeType: websocket
- ignorePortInHostMatching: true
  name: second-listener
  virtualHosts:
  - domains:
    - '*'
    name: second-listener/*
    routes:
    - match:
        headers:
        - name: user
          stringMatch:
            exact: jason
        prefix: /
      name: first-route
      route:
        cluster: first-route-dest
        timeout: 5s
        upgradeConfigs:
        - upgradeType: websocket
